# film-flicker

./: .editorconfig  .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: pull_request.yml
fixtures/: metadata.csv
scripts/unix/: install.sh
scripts/windows/: install.bat
src/: main.rs
src/utils/: get_photos.rs  mod.rs  paths.rs  read_metadata.rs  update_exif_metadata.rs
wix/: License.rtf  main.wxs
