[package]
name = "film_exif_fixer"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.8", features = ["derive"] }
csv = "1.3.0"
dirs = "5.0.1"
dotenv = "0.15.0"
log = "0.4.22"
pretty_env_logger = "0.5.0"
regex = "1.10.5"
serde = { version = "1.0.203", features = ["derive"] }
snafu = "0.8.3"
walkdir = "2.5.0"