[package]
name = "film_exif_fixer"
version = "0.1.0"
edition = "2021"

[dependencies]
cargo-bundle = "0.6.1"
clap = { version = "4.5.17", features = ["derive"] }
csv = "1.3.0"
dirs = "5.0.1"
directories = "5.0.1"
dotenv = "0.15.0"
log = "0.4.22"
pretty_env_logger = "0.5.0"
regex = "1.10.6"
serde = { version = "1.0.210", features = ["derive"] }
snafu = "0.8.4"
walkdir = "2.5.0"
winapi = { version = "0.3.9", features = ["winbase"] }