[package]
name = "film-flicker"
description = "Changes Exif-Metadata for Photography Scans"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Victor Quiroz"]

[dependencies]
clap = { version = "4.5.8", features = ["derive"] }
console = "0.15.8"
csv = "1.3.0"
directories = "5.0.1"
dirs = "5.0.1"
dotenv = "0.15.0"
fraction = "0.15.3"
indicatif = "0.17.8"
log = "0.4.22"
pretty_env_logger = "0.5.0"
regex = "1.10.6"
serde = { version = "1.0.203", features = ["derive"] }
snafu = "0.8.3"
walkdir = "2.5.0"
winapi = { version = "0.3.9", features = ["winbase"] }

[build-dependencies]
snafu = "0.8.3"
walkdir = "2.5.0"
zip = { version = "2.2.0" }

#[package.metadata.bundle]
#name = "photo_scan_metadata"
#identifier = "com.victorhqc.photo_scan_metadata"
#version = "0.1.0"
#resources = ["./deps/exiftool.zip"]